SFA-1243 - set min width for manager worksheet td to prevent shifting

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -544,6 +544,7 @@ FLEXLIST GENERIC */
       }
     }
     & > tbody > tr > td {
+      min-width: 105px;
       padding: 0px 4px;
       span.detail:hover,
       span.list:hover {
